program/ingress/ingress-nginx/ingress-myapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-ingress
  namespace: default
spec:
  selector:
    app: tomcat-pod-ingress
  ports:
  - port: 80
    name: http
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-myapp
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: master.sunlge.com
    http:
      paths:
      - path:
        backend:
         serviceName: myapp-ingress  ##后端是svc,相当于一个svc的标签去标记svc的后端pod。
         servicePort: 80
